<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="ga_trackingId">UA-51741832-1</string>
    <string name="toast_wallet_reset">"Wallet was reset,
will take some time to recover"</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u>safety notes&lt;/u>.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u>back up your wallet&lt;/u>!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
    <string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
    <string name="wallet_address_fragment_your">Your Pandacoin Address:</string>
    <string name="wallet_address_fragment_clipboard_msg">Pandacoin address copied to clipboard</string>
    <string name="wallet_addresses_fragment_add_dialog_title">Add Pandacoin address</string>
    <string name="wallet_addresses_fragment_add_dialog_message">Pandacoin addresses cannot be deleted. Do you want to add a new address to your wallet?</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Exchange Rates</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">rate</string>
    <string name="exchange_rates_fragment_balance">balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_context_set_as_default_title">Set as default foreign currency</string>
    <string name="wallet_transactions_fragment_tab_received">⇦ Received</string>
    <string name="wallet_transactions_fragment_tab_all">Both</string>
    <string name="wallet_transactions_fragment_tab_sent">Sent ⇨</string>
    <string name="wallet_transactions_fragment_empty_text_received">No Pandacoins received so far.</string>
    <string name="wallet_transactions_fragment_empty_text_sent">No Pandacoins sent so far.</string>
    <string name="wallet_transactions_fragment_empty_text_howto">"How to get Pandacoins?

Trade for traditional money,
sell goods or services or
earn by working."</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u>backed up your wallet&lt;/u>, to protect against loss?</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_context_show_qr_title">Show QR code</string>
    <string name="wallet_transactions_context_browse">Explorer</string>
    <string name="wallet_transactions_context_show_transaction_title">Transaction details</string>
    <string name="wallet_options_backup">Back up Keys</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_options_donate">Tip / Donate</string>
    <string name="wallet_donate_address_label">Donation for Community Chest</string>
    <string name="wallet_low_storage_dialog_title">Internal Device Storage Space Low!</string>
    <string name="wallet_low_storage_dialog_msg">"Pandacoin Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your Pandacoins will be at risk!

Do you want to open the Application Manager to uninstall unneeded apps?"</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage Apps</string>
    <string name="wallet_timeskew_dialog_title">Check your time settings!</string>
    <string name="wallet_timeskew_dialog_msg">"Your device time is off by %d minutes. You probably cannot send or receive Pandacoins due to this problem.

You should check and correct your time and timezone settings."</string>
    <string name="wallet_version_dialog_title">A new version is available!</string>
    <string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
    <string name="wallet_version_dialog_msg_deprecated">"If you don't see an update, this probably means your version of Android isn't supported any more."</string>
    <string name="wallet_version_dialog_button_market">Google Play</string>
    <string name="wallet_version_dialog_button_binary">Download</string>
    <string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
    <string name="wallet_old_sdk_dialog_message">"Chances are that one of the next releases of Pandacoin Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.

Unless you know what you are doing, it is recommended to move out your coins soon."</string>
    <string name="send_coins_activity_title">Send Pandacoins</string>
    <string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
    <string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
    <string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
    <string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
    <string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
    <string name="send_coins_fragment_receiving_address_label">Pay to</string>
    <string name="send_coins_fragment_receiving_address_hint">type address or name</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid Pandacoin Address!</string>
    <string name="request_coins_activity_title">Request Pandacoins</string>
    <string name="address_book_activity_title">Address Book</string>
    <string name="address_book_context_send_title">Send Pandacoins to address</string>
    <string name="address_book_context_edit_title">Edit address</string>
    <string name="address_book_context_remove_title">Remove address</string>
    <string name="address_book_context_show_qr_title">Show QR code</string>
    <string name="address_book_context_copy_to_clipboard_title">Copy to clipboard</string>
    <string name="transaction_fragment_time_label">Date</string>
    <string name="transaction_fragment_amount_sent_label">Sent</string>
    <string name="transaction_fragment_amount_received_label">Received</string>
    <string name="transaction_fragment_from_label">Sender</string>
    <string name="transaction_fragment_to_label">Receiver</string>
    <string name="transaction_fragment_status_label">Status</string>
    <string name="transaction_fragment_hash_label">Hash</string>
    <string name="transaction_fragment_length_label">Length</string>
    <string name="network_monitor_activity_title">Network Monitor</string>
    <string name="import_keys_dialog_title">Restore private keys</string>
    <string name="import_keys_dialog_message">Pick a private keys backup file from external or app-private storage:</string>
    <string name="import_keys_dialog_warning">Important: Do not load private keys from dubious sources! Others can gain control over your funds if you do.</string>
    <string name="export_keys_dialog_title">Back up private keys</string>
    <string name="import_export_keys_dialog_password">password</string>
    <string name="import_export_keys_dialog_show">Show password</string>
    <string name="preferences_activity_title">Settings</string>
    <string name="preferences_category_main">Preferences</string>
    <string name="preferences_category_diagnostics">Diagnostics</string>
    <string name="preferences_category_labs">Labs</string>
    <string name="preferences_precision_title">Denomination and precision</string>
    <string name="preferences_precision_summary">Unit to show amounts in. This does not affect computations.</string>
    <string name="preferences_connectivity_notification_title">Connectivity Indicator</string>
    <string name="preferences_connectivity_notification_summary">Show current number of connected peers in the notification area.</string>
    <string name="preferences_trusted_peer_title">Trusted Peer</string>
    <string name="preferences_trusted_peer_summary">IP or hostname of single peer to connect to.</string>
    <string name="preferences_trusted_peer_only_title">Skip Regular Peer Discovery</string>
    <string name="preferences_trusted_peer_only_summary">Prevents connecting to any peers besides the trusted peer.</string>
    <string name="preferences_data_usage_title">Data usage</string>
    <string name="preferences_data_usage_summary">Show options to restrict data usage on mobile networks.</string>
    <string name="preferences_report_issue_title">Report Issue</string>
    <string name="preferences_report_issue_summary">Collect information about your issue and email your report to the developers.</string>
    <string name="preferences_initiate_reset_title">Reset Blockchain</string>
    <string name="preferences_initiate_reset_summary">Reset blockchain, transactions and wallet balance. Replay will take a while.</string>
    <string name="report_issue_dialog_description">issue description</string>
    <string name="report_issue_dialog_collect_device_info">Append device information</string>
    <string name="report_issue_dialog_collect_installed_packages">Append list of installed packages</string>
    <string name="report_issue_dialog_collect_application_log">Append application log</string>
    <string name="report_issue_dialog_collect_wallet_dump">Append wallet dump</string>
    <string name="about_title">About</string>
    <string name="about_license_title">License</string>
    <string name="about_credits_zxing_title">"This app is using 'zxing'"</string>
    <string name="about_credits_website_title">Pandacoin Website</string>
    <string name="about_credits_forum_title">Pandacoin Forum</string>
    <string name="button_help">Help</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit">Edit</string>
    <string name="button_copy">Copy</string>
    <string name="button_request_coins">Request coins</string>
    <string name="button_send_coins">Send coins</string>
    <string name="button_scan">Scan</string>
    <string name="button_edit_address">Add/edit address</string>
    <string name="action_browse">Browse</string>
    <string name="wallet_options_disconnect">Disconnect</string>
    <string name="transaction_fragment_confirmations_label">Confirmations</string>
</resources>