<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_action_send" android:id="@id/sending_addresses_context_send" android:title="@string/address_book_context_send_title" android:titleCondensed="@string/button_send_coins" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_edit" android:id="@id/sending_addresses_context_edit" android:title="@string/address_book_context_edit_title" android:titleCondensed="@string/button_edit" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_delete" android:id="@id/sending_addresses_context_remove" android:title="@string/address_book_context_remove_title" android:titleCondensed="@string/button_delete" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_qr" android:id="@id/sending_addresses_context_show_qr" android:title="@string/address_book_context_show_qr_title" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_action_copy" android:id="@id/sending_addresses_context_copy_to_clipboard" android:title="@string/address_book_context_copy_to_clipboard_title" android:titleCondensed="@string/button_copy" android:showAsAction="ifRoom|withText" />
</menu>