<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/about_title">
        <Preference android:title="Version" android:key="about_version" />
        <Preference android:title="Copyright" android:summary="© 2015-2018 \n Digital Pandacoin (PND) Dev Team" />
        <Preference android:title="@string/about_license_title" android:key="about_license" />
        <Preference android:title="@string/about_credits_website_title" android:key="about_credits_website" />
        <Preference android:title="@string/about_credits_forum_title" android:key="about_credits_forum" />
        <Preference android:title="@string/about_credits_zxing_title" android:key="about_credits_zxing" />
    </PreferenceCategory>
</PreferenceScreen>