<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:background="@android:color/black" android:paddingLeft="12.0dip" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableRow android:id="@id/transaction_fragment_time_row">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_time_label" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_time" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow android:id="@id/transaction_fragment_amount_sent_row">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_amount_sent_label" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_amount_sent" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow android:id="@id/transaction_fragment_amount_received_row">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_amount_received_label" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_amount_received" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_from_label" />
        <FrameLayout android:layout_gravity="bottom" android:id="@id/transaction_fragment_from_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:foreground="@drawable/dropdown_ic_arrow" android:foregroundGravity="bottom|center|right" style="@style/My.Widget.Button.Borderless">
            <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_from_label" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
    </TableRow>
    <TableRow>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_to_label" />
        <FrameLayout android:layout_gravity="bottom" android:id="@id/transaction_fragment_to_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:foreground="@drawable/dropdown_ic_arrow" android:foregroundGravity="bottom|center|right" style="@style/My.Widget.Button.Borderless">
            <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_to_label" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
    </TableRow>
    <TableRow android:paddingTop="16.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_status_label" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_status" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow android:paddingTop="16.0dip">
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_confirmations_label" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_confirmations" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <TableRow>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_hash_label" />
        <FrameLayout android:layout_gravity="bottom" android:id="@id/transaction_fragment_hash_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:foreground="@drawable/dropdown_ic_arrow" android:foregroundGravity="bottom|center|right" style="@style/My.Widget.Button.Borderless">
            <TextView android:textSize="20.0sp" android:typeface="monospace" android:textColor="@android:color/white" android:id="@id/transaction_fragment_hash" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        </FrameLayout>
    </TableRow>
    <TableRow>
        <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@android:color/white" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/transaction_fragment_length_label" />
        <TextView android:textSize="20.0sp" android:textColor="@android:color/white" android:id="@id/transaction_fragment_length" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </TableRow>
    <ImageView android:layout_gravity="center" android:id="@id/transaction_fragment_qr" android:background="@drawable/qrcode_frame" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerInside" />
</TableLayout>