<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/font_size_normal" android:id="@id/report_issue_dialog_message" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_entry_padding_horizontal_lax" android:layout_marginTop="@dimen/list_entry_padding_vertical" android:layout_marginRight="@dimen/list_entry_padding_horizontal_lax" android:layout_marginBottom="@dimen/list_entry_padding_vertical" />
        <EditText android:id="@id/report_issue_dialog_description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_entry_padding_horizontal" android:layout_marginTop="@dimen/list_entry_padding_vertical" android:layout_marginRight="@dimen/list_entry_padding_horizontal" android:layout_marginBottom="@dimen/list_entry_padding_vertical" android:hint="@string/report_issue_dialog_description" android:inputType="textCapSentences|textMultiLine" />
        <CheckBox android:textSize="@dimen/font_size_normal" android:id="@id/report_issue_dialog_collect_device_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_entry_padding_horizontal" android:layout_marginTop="@dimen/list_entry_padding_vertical" android:layout_marginRight="@dimen/list_entry_padding_horizontal" android:layout_marginBottom="@dimen/list_entry_padding_vertical" android:checked="true" android:text="@string/report_issue_dialog_collect_device_info" />
        <CheckBox android:textSize="@dimen/font_size_normal" android:id="@id/report_issue_dialog_collect_application_log" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_entry_padding_horizontal" android:layout_marginTop="@dimen/list_entry_padding_vertical" android:layout_marginRight="@dimen/list_entry_padding_horizontal" android:layout_marginBottom="@dimen/list_entry_padding_vertical" android:checked="true" android:text="@string/report_issue_dialog_collect_application_log" />
        <CheckBox android:textSize="@dimen/font_size_normal" android:id="@id/report_issue_dialog_collect_wallet_dump" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_entry_padding_horizontal" android:layout_marginTop="@dimen/list_entry_padding_vertical" android:layout_marginRight="@dimen/list_entry_padding_horizontal" android:layout_marginBottom="@dimen/list_entry_padding_vertical" android:checked="false" android:text="@string/report_issue_dialog_collect_wallet_dump" />
        <CheckBox android:textSize="@dimen/font_size_normal" android:id="@id/report_issue_dialog_collect_installed_packages" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/list_entry_padding_horizontal" android:layout_marginTop="@dimen/list_entry_padding_vertical" android:layout_marginRight="@dimen/list_entry_padding_horizontal" android:layout_marginBottom="@dimen/list_entry_padding_vertical" android:checked="false" android:text="@string/report_issue_dialog_collect_installed_packages" />
    </LinearLayout>
</ScrollView>